# CRISP-v2

./: .gitignore  LICENSE  README.md  README_CRISP_v2.md  pyproject.toml
docs/: architecture_v2.md
examples/: basic_v2_usage.py  top_m_routing.py
src/crisp/: __init__.py  classifier.py  cli.py  clustered_classifier.py  memory.py  router.py  utils.py  voting.py
src/crisp/encoders/: __init__.py  base.py  clip_encoder.py  factory.py  resnet.py
src/crisp/memory_policies/: __init__.py  herding.py
src/crisp/retrievers/: __init__.py  annoy_backend.py  base.py  factory.py  faiss_backend.py  numpy_backend.py
tests/: test_herding.py  test_memory.py  test_voting.py
